changes in tests

--- a/tests/templates/self-grandp.njk
+++ b/tests/templates/self-grandp.njk
@@ -1,1 +1,1 @@
-{% extends "self-parent.njk" %}{% block x %}C{{ super() }}{% endblock %}
+{% extends "self-parent.njk" %}{% block x %}C{% endblock %}
