--- a/tests/templates/self-child.njk
+++ b/tests/templates/self-child.njk
@@ -1,1 +1,1 @@
-{% if false %}{% block x %}A{% endblock %}{% endif %}{{ self.x() }}
+{% if false %}{% block x %}A{{super()}}{% endblock %}{% endif %}{{ self.x() }}
